--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,9 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "php": "^7.2|^8.0",
-        "illuminate/support": "^5.0|^6.0|^7.0|^8.0"
+        "php": "^7.2|^8.0|^8.1",
+        "illuminate/support": "^5.0|^6.0|^7.0|^8.0|^9.0",
+        "guzzlehttp/guzzle": "~6|~7|~8|~9"
    },
    "require-dev": {
         "phpunit/phpunit" : "^8.3",
