--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "kingflamez/laravelrave",
+    "name": "afszidan/laravelrave",
     "description": "A Laravel 5 Package for Flutterwave Rave",
     "keywords": ["php","github", "laravel","Open Source","payments", "kingflamez", "Flutterwave Rave", "Flutterwave", "rave", "ravepay.co","laravel 5"],
     "license": "MIT",
@@ -16,11 +16,11 @@
         "guzzlehttp/guzzle": "~6|~7|~8|~9"
    },
    "require-dev": {
-        "phpunit/phpunit" : "^8.3",
+        "phpunit/phpunit" : "^8.3|^9.0",
         "scrutinizer/ocular": "^1.1",
         "satooshi/php-coveralls": ">0.7",
         "mockery/mockery": "^1.2",
-        "orchestra/testbench": "^4.0"
+        "orchestra/testbench": "^4.0|^5.0|^6.0|^7.0"
     },
     "autoload": {
         "classmap": [
